@@ -3,6 +3,7 @@ package io.github.jbellis.brokk;
 import static io.github.jbellis.brokk.prompts.EditBlockUtils.DEFAULT_FENCE;
 
 import com.google.common.base.Splitter;
+import io.github.jbellis.brokk.analyzer.CodeUnit;
 import io.github.jbellis.brokk.analyzer.ProjectFile;
 import java.io.IOException;
 import java.util.ArrayList;
@@ -12,6 +13,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
@@ -105,28 +108,33 @@ public class EditBlock {
      * blocks corresponding to new files.
      */
     public static EditResult apply(IContextManager contextManager, IConsoleIO io, Collection<SearchReplaceBlock> blocks)
-            throws IOException {
+            throws IOException, InterruptedException {
         // Track which blocks succeed or fail during application
         List<FailedBlock> failed = new ArrayList<>();
         Map<SearchReplaceBlock, ProjectFile> succeeded = new HashMap<>();
         List<ProjectFile> newFiles = new ArrayList<>();
-
         // Track original file contents before any changes
-        Map<ProjectFile, String> changedFiles = new HashMap<>();
+        Map<ProjectFile, String> originalContentsThisBatch = new HashMap<>();
 
-        for (SearchReplaceBlock block : blocks) {
-            // 1. Resolve the rawFileName
+        // First pass: resolve files and pre-resolve BRK markers BEFORE any file modifications
+        record ApplyPlan(ProjectFile file, SearchReplaceBlock block, String effectiveBefore) {}
+        List<ApplyPlan> plans = new ArrayList<>();
+
+        for (var block : blocks) {
+            final var rawFileName = block.rawFileName();
             ProjectFile file;
-            final String rawFileName = block.rawFileName();
             try {
                 file = resolveProjectFile(contextManager, rawFileName);
             } catch (SymbolAmbiguousException | SymbolInvalidException e) {
                 logger.debug("File resolution failed for block [{}]: {}", rawFileName, e.getMessage());
                 failed.add(new FailedBlock(block, EditBlockFailureReason.FILE_NOT_FOUND));
-                continue; // Skip to the next block
+                continue;
             } catch (SymbolNotFoundException e) {
-                if (rawFileName == null) continue; // should have thrown SymbolInvalidException if this was null.
-
+                if (rawFileName == null) {
+                    // would have thrown SymbolInvalidException if null
+                    failed.add(new FailedBlock(block, EditBlockFailureReason.FILE_NOT_FOUND));
+                    continue;
+                }
                 // create new file for the edit block to work on
                 file = contextManager.toFile(rawFileName);
                 try {
@@ -138,44 +146,62 @@ public class EditBlock {
                 }
             }
 
-            // 2. Apply the edit using replaceInFile
+            // Pre-resolve BRK_CLASS/BRK_FUNCTION so analyzer offsets are from the original file content
+            String effectiveBefore = block.beforeText();
             try {
-                // Save original content before attempting change
-                if (!changedFiles.containsKey(file)) {
-                    changedFiles.put(file, file.exists() ? file.read().orElse("") : "");
+                var maybeResolved = resolveBrkSnippet(contextManager, effectiveBefore.strip());
+                if (maybeResolved != null) {
+                    effectiveBefore = maybeResolved;
+                    logger.debug("Pre-resolved BRK target snippet for {}:\n{}", rawFileName, effectiveBefore);
+                }
+            } catch (NoMatchException | AmbiguousMatchException ex) {
+                // Record the failure early since we cannot resolve the target entity
+                var reason = (ex instanceof NoMatchException)
+                        ? EditBlockFailureReason.NO_MATCH
+                        : EditBlockFailureReason.AMBIGUOUS_MATCH;
+                failed.add(new FailedBlock(block, reason, ""));
+                continue;
+            }
+
+            plans.add(new ApplyPlan(file, block, effectiveBefore));
+        }
+
+        // Second pass: apply in the original order using the pre-resolved search text
+        for (var plan : plans) {
+            var file = plan.file();
+            var block = plan.block();
+            var effectiveBefore = plan.effectiveBefore();
+
+            try {
+                if (!originalContentsThisBatch.containsKey(file)) {
+                    originalContentsThisBatch.put(
+                            file, file.exists() ? file.read().orElse("") : "");
                 }
 
-                // Perform the replacement
-                replaceInFile(file, block.beforeText(), block.afterText(), contextManager);
-
-                // add to succeeded list
-                // If it was a deletion, replaceInFile handled it and returned; file will not exist.
-                // If it was a modification or creation, the file will exist with new content.
+                replaceInFile(file, effectiveBefore, block.afterText(), contextManager);
                 succeeded.put(block, file);
             } catch (NoMatchException | AmbiguousMatchException e) {
-                assert changedFiles.containsKey(file);
-                var originalContent = changedFiles.get(file);
+                assert originalContentsThisBatch.containsKey(file);
+                var originalContent = originalContentsThisBatch.get(file);
                 String commentary;
                 try {
-                    replaceMostSimilarChunk(originalContent, block.afterText, "");
-                    // if it didn't throw:
+                    replaceMostSimilarChunk(contextManager, originalContent, block.afterText(), "");
                     commentary =
                             """
                                  The replacement text is already present in the file. If we no longer need to apply
                                  this block, omit it from your reply.
                                  """
                                     .stripIndent();
-                } catch (NoMatchException | AmbiguousMatchException e2) {
+                } catch (NoMatchException | AmbiguousMatchException | InterruptedException e2) {
                     commentary = "";
                 }
 
-                // Check if the search block looks like a diff
                 if (block.beforeText().lines().anyMatch(line -> line.startsWith("-") || line.startsWith("+"))) {
                     commentary +=
                             """
-                                  Reminder: Brokk uses SEARCH/REPLACE blocks, not unified diff format.
-                                  Ensure the `<<<<<<< SEARCH $filename` block matches the existing code exactly.
-                                  """
+                              Reminder: Brokk uses SEARCH/REPLACE blocks, not unified diff format.
+                              Ensure the `<<<<<<< SEARCH $filename` block matches the existing code exactly.
+                              """
                                     .stripIndent();
                 }
 
@@ -191,11 +217,11 @@ public class EditBlock {
             } catch (IOException e) {
                 var msg = "Error applying edit to " + file;
                 logger.error("{}: {}", msg, e.getMessage());
-                throw new IOException(msg);
+                throw new IOException(msg, e);
             } catch (GitAPIException e) {
                 var msg = "Non-fatal error: unable to update `%s` in Git".formatted(file);
                 logger.error("{}: {}", msg, e.getMessage());
-                io.systemOutput(msg);
+                io.showNotification(IConsoleIO.NotificationRole.INFO, msg);
             }
         }
 
@@ -203,18 +229,14 @@ public class EditBlock {
         if (!newFiles.isEmpty()) {
             try {
                 contextManager.getRepo().add(newFiles);
-                // the file watcher that normally does this automatically is paused during task execution.
-                // clear the cache manually so BuildAgent's call to CM::getTestFiles sees the new files as part of the
-                // project.
                 contextManager.getRepo().invalidateCaches();
             } catch (GitAPIException e) {
                 io.toolError("Failed to add %s to git".formatted(newFiles), "Error");
             }
-            contextManager.addFiles(newFiles);
         }
 
-        changedFiles.keySet().retainAll(succeeded.values());
-        return new EditResult(changedFiles, failed);
+        originalContentsThisBatch.keySet().retainAll(succeeded.values());
+        return new EditResult(originalContentsThisBatch, failed);
     }
 
     /**
@@ -293,9 +315,9 @@ public class EditBlock {
      */
     public static void replaceInFile(
             ProjectFile file, String beforeText, String afterText, IContextManager contextManager)
-            throws IOException, NoMatchException, AmbiguousMatchException, GitAPIException {
+            throws IOException, NoMatchException, AmbiguousMatchException, GitAPIException, InterruptedException {
         String original = file.exists() ? file.read().orElse("") : "";
-        String updated = replaceMostSimilarChunk(original, beforeText, afterText);
+        String updated = replaceMostSimilarChunk(contextManager, original, beforeText, afterText);
 
         if (isDeletion(original, updated)) {
             logger.info("Detected deletion for file {}", file);
@@ -322,69 +344,100 @@ public class EditBlock {
     }
 
     /**
-     * Attempts perfect/whitespace replacements, then tries "...", then fuzzy. Returns the post-replacement content, or
-     * null if no match found. Throws AmbiguousMatchException if multiple matches are found.
+     * Attempts perfect/whitespace replacements, then tries "...", then fuzzy. Returns the post-replacement content.
+     * Also supports special *marker* search targets: - BRK_CONFLICT_$n (new single-line syntax; replaces
+     * BEGIN/END-delimited region with index $n) - BRK_CONFLICT_BEGIN_<n>...BRK_CONFLICT_END_<n> (back-compat: old
+     * behavior where SEARCH contained the whole region) - BRK_CLASS <fqcn> (existing) - BRK_FUNCTION <fqMethodName>
+     * (existing; rejects overloads as ambiguous)
+     *
+     * <p>For BRK_CLASS/BRK_FUNCTION, we fetch the exact source via SourceCodeProvider and then proceed as a normal line
+     * edit using that snippet as the search block.
      */
-    static String replaceMostSimilarChunk(String content, String target, String replace)
-            throws AmbiguousMatchException, NoMatchException {
-        // Special-case: if the search block is a BRK_CONFLICT_BEGIN<n> ... BRK_CONFLICT_END<n> block (allow
-        // surrounding whitespace), then replace the entire conflict block (from the matching begin to end)
-        // in `content` with `replace`.
+    static String replaceMostSimilarChunk(IContextManager contextManager, String content, String target, String replace)
+            throws AmbiguousMatchException, NoMatchException, InterruptedException {
+        // -----------------------------
+        // 0) BRK_CONFLICT block special-cases
+        // -----------------------------
         var trimmedTarget = target.strip();
-        var conflictPattern =
-                java.util.regex.Pattern.compile("(?s)^BRK_CONFLICT_BEGIN(\\d+)[\\s\\S]*BRK_CONFLICT_END\\1$");
-        var m = conflictPattern.matcher(trimmedTarget);
-        if (m.matches()) {
-            var num = m.group(1);
-            // Find occurrences in the whole content. Include an optional trailing newline after the BRK_CONFLICT_END
-            // so that replacing a block that is followed by a newline doesn't leave a duplicate blank line.
-            var findPattern = java.util.regex.Pattern.compile("BRK_CONFLICT_BEGIN" + java.util.regex.Pattern.quote(num)
-                    + "[\\s\\S]*?BRK_CONFLICT_END" + java.util.regex.Pattern.quote(num)
+
+        // 0a) NEW single-line syntax: "BRK_CONFLICT_$n"
+        var conflictLineMatcher = Pattern.compile("^BRK_CONFLICT_(\\d+)\\s*$").matcher(trimmedTarget);
+        if (conflictLineMatcher.matches()) {
+            var num = conflictLineMatcher.group(1);
+            var regionPattern = Pattern.compile("BRK_CONFLICT_BEGIN_" + Pattern.quote(num)
+                    + "[\\s\\S]*?BRK_CONFLICT_END_" + Pattern.quote(num)
                     + "(?:\\r?\\n)?");
-            var matcher = findPattern.matcher(content);
+            var scan = regionPattern.matcher(content);
+
             int count = 0;
-            while (matcher.find()) {
+            while (scan.find()) {
                 count++;
             }
             if (count == 0) {
-                throw new NoMatchException("No matching conflict block found for BRK_CONFLICT_BEGIN" + num);
+                throw new NoMatchException("No matching conflict block found for BRK_CONFLICT_" + num);
             }
             if (count > 1) {
-                throw new AmbiguousMatchException(
-                        "Multiple matching conflict blocks found for BRK_CONFLICT_BEGIN" + num);
+                throw new AmbiguousMatchException("Multiple matching conflict blocks found for BRK_CONFLICT_" + num);
             }
-            // Replace the single occurrence
-            var replaceMatcher = findPattern.matcher(content);
-            var replaced = replaceMatcher.replaceFirst(java.util.regex.Matcher.quoteReplacement(replace));
-            return replaced;
+            // Replace the (only) conflict region
+            return regionPattern.matcher(content).replaceFirst(Matcher.quoteReplacement(replace));
         }
 
-        // 1) prep for line-based matching
+        // -----------------------------
+        // 1) BRK_ENTIRE_FILE (explicit full-file replacement)
+        // -----------------------------
+        if (Pattern.compile("^BRK_ENTIRE_FILE\\s*$").matcher(trimmedTarget).matches()) {
+            // Replace the entire file content with 'replace' (or create new file with that content)
+            return replace;
+        }
+
+        // -----------------------------
+        // 2) BRK_CLASS / BRK_FUNCTION special search syntax
+        // -----------------------------
+        var resolved = resolveBrkSnippet(contextManager, trimmedTarget);
+        if (resolved != null) {
+            target = resolved;
+            // resolveBrkSnippet already validated and gathered suggestions on error
+            logger.debug("BRK target snippet resolved:\n{}", target);
+        }
+
+        // -----------------------------
+        // 3) Normal search/replace (existing behavior)
+        // -----------------------------
         ContentLines originalCL = prep(content);
         ContentLines targetCl = prep(target);
         ContentLines replaceCL = prep(replace);
 
-        // 2) perfect or whitespace approach
-        // Convert List<String> to String[] for perfectOrWhitespace and other methods
+        if (logger.isDebugEnabled()) {
+            logger.debug(
+                    "Original content (non-whitespace):\n{}",
+                    originalCL.lines().stream().map(EditBlock::nonWhitespace).collect(Collectors.joining("\n")));
+            logger.debug(
+                    "Target snippet (non-whitespace):\n{}",
+                    targetCl.lines().stream().map(EditBlock::nonWhitespace).collect(Collectors.joining("\n")));
+        }
+
         String[] originalLinesArray = originalCL.lines().toArray(String[]::new);
         String[] targetLinesArray = targetCl.lines().toArray(String[]::new);
         String[] replaceLinesArray = replaceCL.lines().toArray(String[]::new);
-        String attempt = perfectOrWhitespace(originalLinesArray, targetLinesArray, replaceLinesArray);
+        String attempt = perfectOrWhitespace(
+                originalLinesArray, targetLinesArray, replaceLinesArray, originalCL.originalEndsWithNewline());
         if (attempt != null) {
             return attempt;
         }
 
-        // 3) handle triple-dot expansions
         try {
-            attempt = tryDotdotdots(content, target, replace);
+            attempt = tryDotdotdots(content, target, replace, originalCL.originalEndsWithNewline());
             if (attempt != null) {
                 return attempt;
             }
         } catch (IllegalArgumentException e) {
-            // ignore if it fails
+            // Do not mask unexpected pairing errors from "..."; log and continue to the final NoMatch.
+            logger.debug(
+                    "Ignoring malformed '...' placeholder usage while attempting partial replacement: {}",
+                    e.getMessage());
         }
 
-        // 3a) If that failed, attempt dropping a spurious leading blank line from the "search" block:
         if (targetCl.lines().size() > 2 && targetCl.lines().getFirst().trim().isEmpty()) {
             List<String> splicedTargetList =
                     targetCl.lines().subList(1, targetCl.lines().size());
@@ -394,13 +447,17 @@ public class EditBlock {
             String[] splicedTargetArray = splicedTargetList.toArray(String[]::new);
             String[] splicedReplaceArray = splicedReplaceList.toArray(String[]::new);
 
-            // Pass originalLinesArray which is String[]
-            attempt = perfectOrWhitespace(originalLinesArray, splicedTargetArray, splicedReplaceArray);
+            attempt = perfectOrWhitespace(
+                    originalLinesArray, splicedTargetArray, splicedReplaceArray, originalCL.originalEndsWithNewline());
             if (attempt != null) {
                 return attempt;
             }
 
-            attempt = tryDotdotdots(content, String.join("", splicedTargetArray), String.join("", splicedReplaceArray));
+            attempt = tryDotdotdots(
+                    content,
+                    String.join("\n", splicedTargetArray),
+                    String.join("\n", splicedReplaceArray),
+                    originalCL.originalEndsWithNewline());
             if (attempt != null) {
                 return attempt;
             }
@@ -422,8 +479,13 @@ public class EditBlock {
         return c;
     }
 
-    /** If the search/replace has lines of "..." as placeholders, do naive partial replacements. */
-    public static @Nullable String tryDotdotdots(String whole, String target, String replace) throws NoMatchException {
+    /**
+     * If the search/replace has lines of "..." as placeholders, do naive partial replacements. The
+     * `originalEndsWithNewline` flag indicates if the `whole` string (original content) ended with a newline. The
+     * returned string will preserve this trailing newline status.
+     */
+    public static @Nullable String tryDotdotdots(
+            String whole, String target, String replace, boolean originalEndsWithNewline) throws NoMatchException {
         // If there's no "..." in target or whole, skip
         if (!target.contains("...") && !whole.contains("...")) {
             return null;
@@ -458,6 +520,19 @@ public class EditBlock {
                 result += rp;
             }
         }
+
+        // Adjust the final result to match the original trailing newline status
+        if (!result.isEmpty() && result.endsWith("\n")) {
+            if (!originalEndsWithNewline) {
+                // Result has trailing newline, but original didn't; strip it.
+                result = result.substring(0, result.length() - 1);
+            }
+        } else {
+            if (originalEndsWithNewline) {
+                // Result does not have trailing newline, but original did; add it.
+                result += "\n";
+            }
+        }
         return result;
     }
 
@@ -465,12 +540,13 @@ public class EditBlock {
      * Tries perfect replace first, then leading-whitespace-insensitive. Throws AmbiguousMatchException if more than one
      * match is found in either step, or NoMatchException if no matches are found
      */
-    static @Nullable String perfectOrWhitespace(String[] originalLines, String[] targetLines, String[] replaceLines)
+    static @Nullable String perfectOrWhitespace(
+            String[] originalLines, String[] targetLines, String[] replaceLines, boolean originalEndsWithNewline)
             throws AmbiguousMatchException, NoMatchException {
         try {
-            return perfectReplace(originalLines, targetLines, replaceLines);
+            return perfectReplace(originalLines, targetLines, replaceLines, originalEndsWithNewline);
         } catch (NoMatchException e) {
-            return replaceIgnoringWhitespace(originalLines, targetLines, replaceLines);
+            return replaceIgnoringWhitespace(originalLines, targetLines, replaceLines, originalEndsWithNewline);
         }
     }
 
@@ -478,11 +554,13 @@ public class EditBlock {
      * Tries exact line-by-line match. Returns the post-replacement lines on success. Throws AmbiguousMatchException if
      * multiple exact matches are found. Throws NoMatchException if no exact match is found.
      */
-    static @Nullable String perfectReplace(String[] originalLines, String[] targetLines, String[] replaceLines)
+    static @Nullable String perfectReplace(
+            String[] originalLines, String[] targetLines, String[] replaceLines, boolean originalEndsWithNewline)
             throws AmbiguousMatchException, NoMatchException {
-        // special-case replace entire file (empty target)
+        // Empty SEARCH is no longer a valid “replace entire file” signal.
+        // Callers must use BRK_ENTIRE_FILE explicitly.
         if (targetLines.length == 0) {
-            return String.join("", replaceLines);
+            throw new NoMatchException("Empty SEARCH is not allowed; use BRK_ENTIRE_FILE for full-file replacement.");
         }
 
         List<Integer> matches = new ArrayList<>();
@@ -504,17 +582,21 @@ public class EditBlock {
             throw new NoMatchException("No exact matches found for the search block");
         }
 
-        // Exactly one match
         int matchStart = matches.getFirst();
         List<String> newLines = new ArrayList<>();
-        // everything before
         newLines.addAll(Arrays.asList(originalLines).subList(0, matchStart));
-        // add replacement
         newLines.addAll(Arrays.asList(replaceLines));
-        // everything after
         newLines.addAll(Arrays.asList(originalLines).subList(matchStart + targetLines.length, originalLines.length));
 
-        return String.join("", newLines);
+        // Reconstruct string: join raw lines with \n, then add a final \n if original had one.
+        if (newLines.isEmpty()) {
+            return originalEndsWithNewline ? "\n" : "";
+        }
+        String result = String.join("\n", newLines);
+        if (originalEndsWithNewline) {
+            result += "\n";
+        }
+        return result;
     }
 
     /**
@@ -524,14 +606,17 @@ public class EditBlock {
      * whitespace, or if the search block contained only whitespace.
      */
     static @Nullable String replaceIgnoringWhitespace(
-            String[] originalLines, String[] targetLines, String[] replaceLines)
+            String[] originalLines, String[] targetLines, String[] replaceLines, boolean originalEndsWithNewline)
             throws AmbiguousMatchException, NoMatchException {
         var truncatedTarget = removeLeadingTrailingEmptyLines(targetLines);
         var truncatedReplace = removeLeadingTrailingEmptyLines(replaceLines);
 
         if (truncatedTarget.length == 0) {
-            // Empty target is handled by perfectReplace -- this means we just had whitespace, so fail the edit
-            return null;
+            // If target had only whitespace (or was empty), it's not a valid search.
+            if (Arrays.stream(targetLines).allMatch(String::isBlank)) {
+                throw new NoMatchException("Search block consists only of whitespace and cannot be matched.");
+            }
+            return null; // Fall through to NoMatchException from the caller if this specific case wasn't caught.
         }
 
         List<Integer> matches = new ArrayList<>();
@@ -554,14 +639,27 @@ public class EditBlock {
         // Exactly one match
         int matchStart = matches.getFirst();
 
-        List<String> newLines = new ArrayList<>(Arrays.asList(originalLines).subList(0, matchStart));
+        List<String> resultLines = new ArrayList<>(Arrays.asList(originalLines).subList(0, matchStart));
         if (truncatedReplace.length > 0) {
-            var adjusted = getLeadingWhitespace(originalLines[matchStart]) + truncatedReplace[0].trim() + "\n";
-            newLines.add(adjusted);
-            newLines.addAll(Arrays.asList(truncatedReplace).subList(1, truncatedReplace.length));
+            String leadingWhitespace = getLeadingWhitespace(originalLines[matchStart]);
+            // Add the first replacement line with adjusted leading whitespace
+            resultLines.add(leadingWhitespace + truncatedReplace[0].stripLeading());
+            // Add subsequent replacement lines, also with adjusted leading whitespace
+            for (int i = 1; i < truncatedReplace.length; i++) {
+                resultLines.add(leadingWhitespace + truncatedReplace[i].stripLeading());
+            }
         }
-        newLines.addAll(Arrays.asList(originalLines).subList(matchStart + needed, originalLines.length));
-        return String.join("", newLines);
+        resultLines.addAll(Arrays.asList(originalLines).subList(matchStart + needed, originalLines.length));
+
+        // Reconstruct string: join raw lines with \n, then add a final \n if original had one.
+        if (resultLines.isEmpty()) {
+            return originalEndsWithNewline ? "\n" : "";
+        }
+        String result = String.join("\n", resultLines);
+        if (originalEndsWithNewline) {
+            result += "\n";
+        }
+        return result;
     }
 
     private static String[] removeLeadingTrailingEmptyLines(String[] targetLines) {
@@ -604,9 +702,8 @@ public class EditBlock {
 
     /** @return the whitespace prefix in this line. */
     static String getLeadingWhitespace(String line) {
-        assert line.endsWith("\n");
         int count = 0;
-        for (int i = 0; i < line.length() - 1; i++) { // -1 because we threw newline onto everything
+        for (int i = 0; i < line.length(); i++) {
             if (Character.isWhitespace(line.charAt(i))) {
                 count++;
             } else {
@@ -621,17 +718,77 @@ public class EditBlock {
      * it's not null.
      */
     private static ContentLines prep(String content) {
-        Objects.requireNonNull(content, "Content cannot be null");
-        // ensure it ends with newline
-        if (!content.isEmpty() && !content.endsWith("\n")) {
-            content += "\n";
-        }
-        // Convert to list of lines, each ending with a newline
-        List<String> linesList = content.lines().map(line -> line + "\n").collect(Collectors.toList());
-        return new ContentLines(content, linesList);
+        boolean originalEndsWithNewline = !content.isEmpty() && content.endsWith("\n");
+        List<String> rawLines = content.lines().toList();
+        return new ContentLines(content, rawLines, originalEndsWithNewline);
     }
 
-    private record ContentLines(String original, List<String> lines) { // Ensures this matches the list type
+    private record ContentLines(String original, List<String> lines, boolean originalEndsWithNewline) {}
+
+    /**
+     * Resolve BRK_CLASS / BRK_FUNCTION markers to source snippets via the analyzer without mutating files. Returns null
+     * if the target is not a BRK marker. Throws on not found or ambiguous cases.
+     */
+    private static @Nullable String resolveBrkSnippet(IContextManager contextManager, String trimmedTarget)
+            throws NoMatchException, AmbiguousMatchException, InterruptedException {
+        var markerMatcher = Pattern.compile("^BRK_(CLASS|FUNCTION)\\s+(.+)$").matcher(trimmedTarget);
+        if (!markerMatcher.matches()) {
+            return null;
+        }
+
+        var kind = markerMatcher.group(1);
+        var fqName = markerMatcher.group(2).trim();
+
+        var analyzer = contextManager.getAnalyzer();
+        var scpOpt = analyzer.as(io.github.jbellis.brokk.analyzer.SourceCodeProvider.class);
+        if (scpOpt.isEmpty()) {
+            throw new NoMatchException("Analyzer does not support SourceCodeProvider; cannot use BRK_" + kind);
+        }
+        var scp = scpOpt.get();
+
+        if ("CLASS".equals(kind)) {
+            Optional<String> opt;
+            try {
+                opt = scp.getClassSource(fqName, true);
+            } catch (io.github.jbellis.brokk.analyzer.SymbolNotFoundException e) {
+                opt = Optional.empty();
+            }
+            if (opt.isEmpty()) {
+                var shortName = fqName.contains(".") ? fqName.substring(fqName.lastIndexOf('.') + 1) : fqName;
+                var suggestions = analyzer.searchDefinitions(shortName).stream()
+                        .map(CodeUnit::fqName)
+                        .filter(n -> {
+                            int idx = Math.max(n.lastIndexOf('.'), n.lastIndexOf('$'));
+                            return n.substring(idx + 1).equals(shortName);
+                        })
+                        .limit(3)
+                        .toList();
+                var extra = suggestions.isEmpty() ? "" : " Did you mean " + String.join(", ", suggestions) + "?";
+                throw new NoMatchException("No class source found for '" + fqName + "'." + extra);
+            }
+            return opt.get();
+        } else {
+            Set<String> sources;
+            try {
+                sources = scp.getMethodSources(fqName, true);
+            } catch (io.github.jbellis.brokk.analyzer.SymbolNotFoundException e) {
+                sources = java.util.Collections.emptySet();
+            }
+            if (sources.isEmpty()) {
+                var methodKey = fqName.contains(".") ? fqName.substring(fqName.lastIndexOf('.') + 1) : fqName;
+                var suggestions = analyzer.searchDefinitions(methodKey).stream()
+                        .map(CodeUnit::fqName)
+                        .limit(3)
+                        .toList();
+                var extra = suggestions.isEmpty() ? "" : " Did you mean " + String.join(", ", suggestions) + "?";
+                throw new NoMatchException("No method source found for '" + fqName + "'." + extra);
+            }
+            if (sources.size() > 1) {
+                throw new AmbiguousMatchException("Multiple overloads found for '" + fqName + "' (" + sources.size()
+                        + "). Please provide a non-overloaded, unique name and re-run.");
+            }
+            return sources.iterator().next();
+        }
     }
 
     /**
