@@ -7,11 +7,11 @@ import dev.langchain4j.data.message.AiMessage;
 import dev.langchain4j.data.message.ChatMessage;
 import io.github.jbellis.brokk.AnalyzerWrapper;
 import io.github.jbellis.brokk.ContextManager;
+import io.github.jbellis.brokk.IConsoleIO;
 import io.github.jbellis.brokk.Service;
 import io.github.jbellis.brokk.analyzer.CodeUnit;
 import io.github.jbellis.brokk.analyzer.CodeUnitType;
 import io.github.jbellis.brokk.analyzer.ProjectFile;
-import io.github.jbellis.brokk.analyzer.SkeletonProvider;
 import io.github.jbellis.brokk.context.Context;
 import io.github.jbellis.brokk.context.ContextFragment;
 import io.github.jbellis.brokk.gui.components.MaterialButton;
@@ -341,7 +341,7 @@ public class WorkspacePanel extends JPanel {
                             var fragment = new ContextFragment.ProjectPathFragment(file, panel.contextManager);
                             panel.showFragmentPreview(fragment);
                         }
-                        case VIEW_HISTORY -> requireNonNull(panel.chrome).addFileHistoryTab(file);
+                        case VIEW_HISTORY -> panel.chrome.addFileHistoryTab(file);
                         default ->
                             throw new UnsupportedOperationException(
                                     "File action not implemented: " + WorkspaceAction.this);
@@ -448,7 +448,7 @@ public class WorkspacePanel extends JPanel {
     }
 
     /** Immutable record containing description text and associated file references */
-    public static record DescriptionWithReferences(
+    public record DescriptionWithReferences(
             String description,
             List<TableUtils.FileReferenceList.FileReferenceData> fileReferences,
             ContextFragment fragment) {
@@ -489,9 +489,6 @@ public class WorkspacePanel extends JPanel {
 
             // Extract data from the DescriptionWithReferences record
             DescriptionWithReferences data = (DescriptionWithReferences) value;
-            if (data == null) {
-                return panel; // Return empty panel if no data
-            }
 
             String description = data.description();
             List<TableUtils.FileReferenceList.FileReferenceData> fileReferences = data.fileReferences();
@@ -603,11 +600,7 @@ public class WorkspacePanel extends JPanel {
 
         public PopupBuilder add(List<Action> actions) {
             for (var action : actions) {
-                if (action == null) {
-                    popup.addSeparator();
-                } else {
-                    popup.add(new JMenuItem(action));
-                }
+                popup.add(new JMenuItem(action));
             }
             return this;
         }
@@ -662,6 +655,9 @@ public class WorkspacePanel extends JPanel {
     // Buttons
     // Table popup menu (when no row is selected)
     private JPopupMenu tablePopupMenu;
+
+    // Right-side action buttons
+    private final MaterialButton dropSelectedButton = new MaterialButton();
 
     private static final String READ_ONLY_TIP = "Select latest activity to enable";
     private static final String COPY_ALL_ACTION_CMD = "workspace.copyAll";
@@ -897,8 +893,7 @@ public class WorkspacePanel extends JPanel {
                 if (popupMenuMode == PopupMenuMode.COPY_ONLY) {
                     if (row >= 0) {
                         if (contextTable.getSelectedRowCount() == 0
-                                || !Arrays.stream(contextTable.getSelectedRows())
-                                        .anyMatch(r -> r == row)) {
+                                || Arrays.stream(contextTable.getSelectedRows()).noneMatch(r -> r == row)) {
                             contextTable.setRowSelectionInterval(row, row);
                         }
                         JMenuItem copyItem = new JMenuItem("Copy to Active Workspace");
@@ -945,6 +940,13 @@ public class WorkspacePanel extends JPanel {
         // Set selection mode to allow multiple selection
         contextTable.setSelectionMode(ListSelectionModel.MULTIPLE_INTERVAL_SELECTION);
 
+        // Update drop button enablement on selection changes
+        contextTable.getSelectionModel().addListSelectionListener(e -> {
+            if (!e.getValueIsAdjusting()) {
+                updateDropSelectedButtonEnabled();
+            }
+        });
+
         // Install custom TransferHandler for copy operations and file-list drop import from ProjectTree
         final TransferHandler fileListDropHandler = new TransferHandler() {
             @Override
@@ -965,8 +967,7 @@ public class WorkspacePanel extends JPanel {
             @Override
             public boolean canImport(TransferSupport support) {
                 // Accept file list drops only
-                boolean isFileList = support.isDataFlavorSupported(DataFlavor.javaFileListFlavor);
-                return isFileList;
+                return support.isDataFlavorSupported(DataFlavor.javaFileListFlavor);
             }
 
             @Override
@@ -984,7 +985,7 @@ public class WorkspacePanel extends JPanel {
                     @SuppressWarnings("unchecked")
                     List<File> files =
                             (List<File>) support.getTransferable().getTransferData(DataFlavor.javaFileListFlavor);
-                    if (files == null || files.isEmpty()) {
+                    if (files.isEmpty()) {
                         return false;
                     }
 
@@ -1005,12 +1006,12 @@ public class WorkspacePanel extends JPanel {
                                 }
                                 return inside;
                             })
-                            .map(p -> projectRoot.relativize(p))
+                            .map(projectRoot::relativize)
                             .map(rel -> new ProjectFile(projectRoot, rel))
                             .collect(Collectors.toCollection(java.util.LinkedHashSet::new));
 
                     if (projectFiles.isEmpty()) {
-                        chrome.systemOutput("No project files found in drop");
+                        chrome.showNotification(IConsoleIO.NotificationRole.INFO, "No project files found in drop");
                         return false;
                     }
 
@@ -1030,13 +1031,13 @@ public class WorkspacePanel extends JPanel {
                     }
                     var selection = DropActionDialog.show(chrome.getFrame(), canSummarize, pointer);
                     if (selection == null) {
-                        chrome.systemOutput("Drop canceled");
+                        chrome.showNotification(IConsoleIO.NotificationRole.INFO, "Drop canceled");
                         return false;
                     }
                     switch (selection) {
                         case EDIT -> {
                             // Only allow editing tracked files; others are silently ignored by editFiles
-                            contextManager.submitContextTask("Edit files (drop)", () -> {
+                            contextManager.submitContextTask(() -> {
                                 contextManager.addFiles(projectFiles);
                             });
                         }
@@ -1044,10 +1045,9 @@ public class WorkspacePanel extends JPanel {
                             if (!isAnalyzerReady()) {
                                 return false;
                             }
-                            contextManager.submitContextTask("Summarize files (drop)", () -> {
+                            contextManager.submitContextTask(() -> {
                                 contextManager.addSummaries(
-                                        new java.util.HashSet<ProjectFile>(projectFiles),
-                                        Collections.<CodeUnit>emptySet());
+                                        new java.util.HashSet<>(projectFiles), Collections.emptySet());
                             });
                         }
                         default -> {
@@ -1139,7 +1139,7 @@ public class WorkspacePanel extends JPanel {
         if (popupMenuMode == PopupMenuMode.FULL) {
             // Add button to show Add popup (same menu as table's Add)
             var addButton = new MaterialButton();
-            addButton.setIcon(Icons.ATTACH_FILE);
+            SwingUtilities.invokeLater(() -> addButton.setIcon(Icons.ATTACH_FILE));
             addButton.setToolTipText("Add content to workspace");
             addButton.setFocusable(false);
             addButton.setOpaque(false);
@@ -1147,12 +1147,35 @@ public class WorkspacePanel extends JPanel {
                 attachContextViaDialog();
             });
 
-            // Wrap the button so it vertically centers nicely with the labels
+            // Create a trash button to drop selected fragment(s)
+            SwingUtilities.invokeLater(() -> dropSelectedButton.setIcon(Icons.TRASH));
+            dropSelectedButton.setToolTipText("Drop selected item(s) from workspace");
+            dropSelectedButton.setFocusable(false);
+            dropSelectedButton.setOpaque(false);
+            dropSelectedButton.addActionListener(e -> {
+                var fragsToDrop = getSelectedFragments();
+                if (fragsToDrop.isEmpty()) {
+                    // No-op if no selection; enable state prevents this in normal flow.
+                    return;
+                }
+                performContextActionAsync(ContextAction.DROP, fragsToDrop);
+            });
+
+            // Panel to hold buttons with horizontal gap
+            var buttonsPanel = new JPanel(new FlowLayout(FlowLayout.LEFT, Constants.H_GAP, 0));
+            buttonsPanel.setOpaque(false);
+            buttonsPanel.add(addButton);
+            buttonsPanel.add(dropSelectedButton);
+
+            // Wrap the buttons so they vertically center nicely with the labels
             var buttonWrapper = new JPanel(new GridBagLayout());
             buttonWrapper.setOpaque(false);
-            buttonWrapper.add(addButton);
+            buttonWrapper.add(buttonsPanel);
 
             summaryWithAdd.add(buttonWrapper, BorderLayout.EAST);
+
+            // Initialize the enabled state according to selection/editability
+            updateDropSelectedButtonEnabled();
         }
 
         contextSummaryPanel.add(summaryWithAdd, BorderLayout.NORTH);
@@ -1245,11 +1268,11 @@ public class WorkspacePanel extends JPanel {
 
             private void handleScrollPanePopup(MouseEvent e) {
                 if (e.isPopupTrigger()) {
-                    // Use the scroll pane directly instead of getting it from the layered pane
-                    var scrollPane = tableScrollPane;
                     // Get the event point in view coordinates
                     var viewPoint = SwingUtilities.convertPoint(
-                            scrollPane, e.getPoint(), scrollPane.getViewport().getView());
+                            tableScrollPane,
+                            e.getPoint(),
+                            tableScrollPane.getViewport().getView());
 
                     // If the click is in the table and on a row, let the table's listener handle it
                     if (contextTable.getRowCount() > 0) {
@@ -1260,7 +1283,7 @@ public class WorkspacePanel extends JPanel {
                     }
 
                     // Otherwise show the table popup menu
-                    tablePopupMenu.show(scrollPane, e.getX(), e.getY());
+                    tablePopupMenu.show(tableScrollPane, e.getX(), e.getY());
                 }
             }
         };
@@ -1382,7 +1405,7 @@ public class WorkspacePanel extends JPanel {
                                 file.getFileName(), file.toString(), file))
                         .distinct()
                         .sorted(Comparator.comparing(TableUtils.FileReferenceList.FileReferenceData::getFileName))
-                        .collect(Collectors.toList());
+                        .toList();
             }
 
             // Create rich description object
@@ -1390,103 +1413,27 @@ public class WorkspacePanel extends JPanel {
             tableModel.addRow(new Object[] {locText, descriptionWithRefs, frag});
         }
 
-        var approxTokens = Messages.getApproximateTokens(fullText.toString());
         var innerLabel = safeGetLabel(0);
         var costLabel = safeGetLabel(1);
 
-        // Check for context size warning against the selected model only
-        var service = contextManager.getService();
-        var instructionsPanel = chrome.getInstructionsPanel();
-        Service.ModelConfig selectedConfig = instructionsPanel.getSelectedModel();
-
-        boolean showRedWarning = false;
-        boolean showYellowWarning = false;
-        int selectedModelMaxInputTokens = -1;
-        String selectedModelName = selectedConfig.name();
-
-        if (!selectedModelName.isBlank()) {
-            try {
-                var modelInstance = service.getModel(selectedConfig);
-                if (modelInstance == null) {
-                    logger.debug("Selected model unavailable for context warning: {}", selectedModelName);
-                } else if (modelInstance instanceof Service.UnavailableStreamingModel) {
-                    logger.debug("Selected model unavailable for context warning: {}", selectedModelName);
-                } else {
-                    selectedModelMaxInputTokens = service.getMaxInputTokens(modelInstance);
-                    if (selectedModelMaxInputTokens <= 0) {
-                        logger.warn(
-                                "Selected model {} has invalid maxInputTokens: {}",
-                                selectedModelName,
-                                selectedModelMaxInputTokens);
-                    } else {
-                        // Red warning: context > 90.9% of max (approxTokens > maxInputTokens / 1.1)
-                        if (approxTokens > selectedModelMaxInputTokens / 1.1) {
-                            showRedWarning = true;
-                        }
-                        // Yellow warning: context > 50% of max (approxTokens > maxInputTokens / 2.0)
-                        else if (approxTokens > selectedModelMaxInputTokens / 2.0) {
-                            showYellowWarning = true;
-                        }
-                    }
-                }
-            } catch (Exception e) {
-                logger.warn(
-                        "Error processing selected model {} for context warning: {}",
-                        selectedModelName,
-                        e.getMessage(),
-                        e);
-            }
-        }
-
-        String warningTooltip =
-                """
-        Consider replacing full files with summaries or tackling a smaller piece of your problem to start with.
-        Deep Scan can help surface the parts of your codebase that are necessary to solving the problem.
-        """;
-
-        // Always set the standard summary text on innerLabel
-        innerLabel.setForeground(UIManager.getColor("Label.foreground")); // Reset to default color
-        String costEstimate = calculateCostEstimate(approxTokens, service);
-        innerLabel.setText("Total: %,d LOC, or about %,dk tokens.".formatted(totalLines, approxTokens / 1000));
-        innerLabel.setToolTipText(null); // Clear tooltip
-
-        if (costEstimate.isBlank()) {
-            costLabel.setText(" ");
-            costLabel.setVisible(false);
-        } else {
-            costLabel.setText("Estimated cost/request is " + costEstimate);
-            costLabel.setVisible(true);
-        }
-
-        // Remove any existing warning labels from the warningPanel
+        // Prepare UI placeholders while computing tokens off the EDT
+        innerLabel.setForeground(UIManager.getColor("Label.foreground"));
+        innerLabel.setText("Calculating token estimate...");
+        innerLabel.setToolTipText("Total: %,d LOC".formatted(totalLines));
+        costLabel.setText(" ");
+        costLabel.setVisible(false);
         warningPanel.removeAll();
-
-        if (showRedWarning) {
-            String warningText = String.format(
-                    "Warning! Your Workspace (~%,d tokens) fills more than 90%% of the context window for the selected model: %s (%,d). Performance will be degraded.",
-                    approxTokens, selectedModelName, selectedModelMaxInputTokens);
-
-            JTextArea warningArea = createWarningTextArea(warningText, Color.RED, warningTooltip);
-            warningPanel.add(warningArea, BorderLayout.CENTER);
-
-        } else if (showYellowWarning) {
-            String warningText = String.format(
-                    "Warning! Your Workspace (~%,d tokens) fills more than half of the context window for the selected model: %s (%,d). Performance may be degraded.",
-                    approxTokens, selectedModelName, selectedModelMaxInputTokens);
-
-            JTextArea warningArea = createWarningTextArea(
-                    warningText, Color.YELLOW, warningTooltip); // Standard yellow might be hard to see on some themes
-            warningPanel.add(warningArea, BorderLayout.CENTER);
-        }
-
         warningPanel.revalidate();
         warningPanel.repaint();
 
         revalidate();
         repaint();
 
-        // Notify listeners that bottom controls height may have changed
+        // Notify listeners that bottom controls height may have changed (may shrink when warnings cleared)
         fireBottomControlsHeightChanged();
+
+        // Compute tokens off the EDT and update UI on completion
+        computeApproxTokensAsync(fullText, totalLines);
     }
 
     /** Called by Chrome to refresh the table if context changes */
@@ -1553,15 +1500,10 @@ public class WorkspacePanel extends JPanel {
     /** Returns true if all files from the fragments are tracked project files */
     private boolean allTrackedProjectFiles(List<ContextFragment> fragments) {
         var project = contextManager.getProject();
-        var allFiles = fragments.stream()
-                .flatMap(frag -> frag.files().stream())
-                .filter(Objects::nonNull)
-                .collect(Collectors.toSet());
+        var allFiles = fragments.stream().flatMap(frag -> frag.files().stream()).collect(Collectors.toSet());
 
         return !allFiles.isEmpty()
                 && allFiles.stream()
-                        .filter(ProjectFile.class::isInstance)
-                        .map(ProjectFile.class::cast)
                         .allMatch(pf -> pf.exists()
                                 && project.getRepo().getTrackedFiles().contains(pf));
     }
@@ -1588,7 +1530,7 @@ public class WorkspacePanel extends JPanel {
                                 file.getFileName(), file.toString(), file))
                         .distinct()
                         .sorted(Comparator.comparing(TableUtils.FileReferenceList.FileReferenceData::getFileName))
-                        .collect(Collectors.toList());
+                        .toList();
 
                 if (!fileReferences.isEmpty()) {
                     // We need to determine if the click was specifically on a badge
@@ -1625,7 +1567,7 @@ public class WorkspacePanel extends JPanel {
             return;
         }
 
-        contextManager.submitContextTask("Find Symbol Usage", () -> {
+        contextManager.submitContextTask(() -> {
             try {
                 var analyzer = contextManager.getAnalyzerUninterrupted();
                 if (analyzer.isEmpty()) {
@@ -1639,10 +1581,10 @@ public class WorkspacePanel extends JPanel {
                         && !selection.symbol().isBlank()) {
                     contextManager.usageForIdentifier(selection.symbol(), selection.includeTestFiles());
                 } else {
-                    chrome.systemOutput("No symbol selected.");
+                    chrome.showNotification(IConsoleIO.NotificationRole.INFO, "No symbol selected.");
                 }
             } catch (CancellationException cex) {
-                chrome.systemOutput("Symbol selection canceled.");
+                chrome.showNotification(IConsoleIO.NotificationRole.INFO, "Symbol selection canceled.");
             }
             // No finally needed, submitContextTask handles enabling buttons
         });
@@ -1654,7 +1596,7 @@ public class WorkspacePanel extends JPanel {
             return;
         }
 
-        contextManager.submitContextTask("Find Method Callers", () -> {
+        contextManager.submitContextTask(() -> {
             try {
                 var analyzer = contextManager.getAnalyzerUninterrupted();
                 if (analyzer.isEmpty()) {
@@ -1664,18 +1606,19 @@ public class WorkspacePanel extends JPanel {
 
                 var dialog = showCallGraphDialog("Select Method", true);
                 if (dialog == null || !dialog.isConfirmed()) { // Check confirmed state
-                    chrome.systemOutput("No method selected.");
+                    chrome.showNotification(IConsoleIO.NotificationRole.INFO, "No method selected.");
                 } else {
                     var selectedMethod = dialog.getSelectedMethod();
                     var callGraph = dialog.getCallGraph();
                     if (selectedMethod != null && callGraph != null) {
                         contextManager.addCallersForMethod(selectedMethod, dialog.getDepth(), callGraph);
                     } else {
-                        chrome.systemOutput("Method selection incomplete or cancelled.");
+                        chrome.showNotification(
+                                IConsoleIO.NotificationRole.INFO, "Method selection incomplete or cancelled.");
                     }
                 }
             } catch (CancellationException cex) {
-                chrome.systemOutput("Method selection canceled.");
+                chrome.showNotification(IConsoleIO.NotificationRole.INFO, "Method selection canceled.");
             }
             // No finally needed, submitContextTask handles enabling buttons
         });
@@ -1687,7 +1630,7 @@ public class WorkspacePanel extends JPanel {
             return;
         }
 
-        contextManager.submitContextTask("Find Method Callees", () -> {
+        contextManager.submitContextTask(() -> {
             try {
                 var analyzer = contextManager.getAnalyzerUninterrupted();
                 if (analyzer.isEmpty()) {
@@ -1697,18 +1640,19 @@ public class WorkspacePanel extends JPanel {
 
                 var dialog = showCallGraphDialog("Select Method for Callees", false);
                 if (dialog == null || !dialog.isConfirmed()) {
-                    chrome.systemOutput("No method selected.");
+                    chrome.showNotification(IConsoleIO.NotificationRole.INFO, "No method selected.");
                 } else {
                     var selectedMethod = dialog.getSelectedMethod();
                     var callGraph = dialog.getCallGraph();
                     if (selectedMethod != null && callGraph != null) {
                         contextManager.calleesForMethod(selectedMethod, dialog.getDepth(), callGraph);
                     } else {
-                        chrome.systemOutput("Method selection incomplete or cancelled.");
+                        chrome.showNotification(
+                                IConsoleIO.NotificationRole.INFO, "Method selection incomplete or cancelled.");
                     }
                 }
             } catch (CancellationException cex) {
-                chrome.systemOutput("Method selection canceled.");
+                chrome.showNotification(IConsoleIO.NotificationRole.INFO, "Method selection canceled.");
             }
             // No finally needed, submitContextTask handles enabling buttons
         });
@@ -1754,7 +1698,7 @@ public class WorkspacePanel extends JPanel {
             ContextAction action, List<? extends ContextFragment> selectedFragments) // Use wildcard
             {
         // Use submitContextTask from ContextManager to run the action on the appropriate executor
-        return contextManager.submitContextTask(action + " action", () -> {
+        return contextManager.submitContextTask(() -> {
             try {
                 switch (action) {
                     case EDIT -> doEditAction(selectedFragments);
@@ -1765,7 +1709,7 @@ public class WorkspacePanel extends JPanel {
                     case RUN_TESTS -> doRunTestsAction(selectedFragments);
                 }
             } catch (CancellationException cex) {
-                chrome.systemOutput(action + " canceled.");
+                chrome.showNotification(IConsoleIO.NotificationRole.INFO, action + " canceled.");
             } finally {
                 SwingUtilities.invokeLater(chrome::focusInput);
             }
@@ -1786,7 +1730,7 @@ public class WorkspacePanel extends JPanel {
         var sel = new java.awt.datatransfer.StringSelection(content);
         var cb = java.awt.Toolkit.getDefaultToolkit().getSystemClipboard();
         cb.setContents(sel, sel);
-        chrome.systemOutput("Content copied to clipboard");
+        chrome.showNotification(IConsoleIO.NotificationRole.INFO, "Content copied to clipboard");
     }
 
     private String getSelectedContent(List<? extends ContextFragment> selectedFragments) {
@@ -1865,7 +1809,7 @@ public class WorkspacePanel extends JPanel {
 
                     if (image != null) {
                         contextManager.addPastedImageFragment(image);
-                        chrome.systemOutput("Pasted image added to context");
+                        chrome.showNotification(IConsoleIO.NotificationRole.INFO, "Pasted image added to context");
                         return;
                     }
                 }
@@ -1912,18 +1856,22 @@ public class WorkspacePanel extends JPanel {
                     // Try to handle as image URL first
                     if (ImageUtil.isImageUri(uri, httpClient)) {
                         try {
-                            chrome.systemOutput("Fetching image from " + clipboardText);
+                            chrome.showNotification(
+                                    IConsoleIO.NotificationRole.INFO, "Fetching image from " + clipboardText);
                             java.awt.Image image = ImageUtil.downloadImage(uri, httpClient);
                             if (image != null) {
                                 contextManager.addPastedImageFragment(image);
-                                chrome.systemOutput("Pasted image from URL added to context");
+                                chrome.showNotification(
+                                        IConsoleIO.NotificationRole.INFO, "Pasted image from URL added to context");
                                 chrome.actionComplete();
                                 return; // Image handled, done with paste action
                             } else {
                                 logger.warn(
                                         "URL {} identified as image by ImageUtil, but downloadImage returned null. Falling back to text.",
                                         clipboardText);
-                                chrome.systemOutput("Could not load image from URL. Trying to fetch as text.");
+                                chrome.showNotification(
+                                        IConsoleIO.NotificationRole.INFO,
+                                        "Could not load image from URL. Trying to fetch as text.");
                             }
                         } catch (
                                 Exception e) { // Catching general exception as downloadImage might throw various things
@@ -1932,7 +1880,8 @@ public class WorkspacePanel extends JPanel {
                                     "Failed to fetch or decode image from URL {}: {}. Falling back to text.",
                                     clipboardText,
                                     e.getMessage());
-                            chrome.systemOutput(
+                            chrome.showNotification(
+                                    IConsoleIO.NotificationRole.INFO,
                                     "Failed to load image from URL: " + e.getMessage() + ". Trying to fetch as text.");
                             // Fall through to fetching as text
                         }
@@ -1940,7 +1889,8 @@ public class WorkspacePanel extends JPanel {
 
                     // Fallback: If not an image URL or image fetching failed, try to fetch as text
                     try {
-                        chrome.systemOutput("Fetching content from " + clipboardText);
+                        chrome.showNotification(
+                                IConsoleIO.NotificationRole.INFO, "Fetching content from " + clipboardText);
                         content = WorkspaceTools.fetchUrlContent(uri);
                         content = HtmlToMarkdown.maybeConvertToMarkdown(content);
                         wasUrl = true;
@@ -1965,7 +1915,7 @@ public class WorkspacePanel extends JPanel {
             if (stacktrace == null) {
                 // addStackTraceFragment sends its own messages
                 String message = wasUrl ? "URL content fetched and added" : "Clipboard content added as text";
-                chrome.systemOutput(message);
+                chrome.showNotification(IConsoleIO.NotificationRole.INFO, message);
             }
         } else {
             chrome.toolError("Unsupported clipboard content type");
@@ -1979,14 +1929,26 @@ public class WorkspacePanel extends JPanel {
             }
             contextManager.dropAll();
             contextManager.setSelectedContext(contextManager.topContext());
-        } else {
-            for (var frag : selectedFragments) {
-                if (frag.getType() == ContextFragment.FragmentType.HISTORY) {
-                    contextManager.clearHistory();
-                    break;
-                }
-            }
+            return;
+        }
 
+        boolean hasHistory =
+                selectedFragments.stream().anyMatch(f -> f.getType() == ContextFragment.FragmentType.HISTORY);
+
+        if (hasHistory) {
+            // 1) Clear task history if any HISTORY fragment is included
+            contextManager.clearHistory();
+
+            // 2) Drop only the non-HISTORY fragments, if any
+            var nonHistory = selectedFragments.stream()
+                    .filter(f -> f.getType() != ContextFragment.FragmentType.HISTORY)
+                    .toList();
+
+            if (!nonHistory.isEmpty()) {
+                contextManager.drop(nonHistory);
+            }
+        } else {
+            // 3) No HISTORY fragments in the selection: keep existing behavior
             contextManager.drop(selectedFragments); // Use the new ID-based method
         }
     }
@@ -2023,56 +1985,17 @@ public class WorkspacePanel extends JPanel {
 
         if (result == null) return;
 
-        var fragment = result.fragment();
+        Set<ProjectFile> files = result.fragments();
         boolean summarize = result.summarize();
 
-        contextManager.submitContextTask("Attach Context", () -> {
-            if (summarize) {
-                switch (fragment.getType()) {
-                    case PROJECT_PATH -> {
-                        var files = fragment.files();
-                        contextManager.addSummaries(files, Collections.emptySet());
-                    }
-                    case CODE -> {
-                        var cf = (ContextFragment.CodeFragment) fragment;
-                        var cu = cf.getCodeUnit();
-                        if (cu.isClass()) {
-                            contextManager.addSummaries(Collections.emptySet(), java.util.Set.of(cu));
-                        } else {
-                            var analyzer = contextManager
-                                    .getAnalyzerUninterrupted()
-                                    .as(SkeletonProvider.class)
-                                    .orElseThrow();
-                            analyzer.getSkeleton(cu.fqName()).ifPresent(st -> {
-                                var summary = new ContextFragment.StringFragment(
-                                        contextManager,
-                                        st,
-                                        "Summary of " + cu.fqName(),
-                                        cu.source().getSyntaxStyle());
-                                contextManager.addVirtualFragment(summary);
-                            });
-                        }
-                    }
-                    case CALL_GRAPH, USAGE -> {
-                        // For Usages+Summarize we already returned a CallGraphFragment. Any CALL_GRAPH/USAGE just add.
-                        if (fragment instanceof ContextFragment.VirtualFragment vf) {
-                            contextManager.addVirtualFragment(vf);
-                        }
-                    }
-                    default -> {
-                        throw new AssertionError();
-                    }
-                }
+        contextManager.submitContextTask(() -> {
+            if (files.isEmpty()) {
                 return;
             }
-
-            // Non-summarize path: attach fragments directly
-            if (fragment instanceof ContextFragment.ProjectPathFragment ppf) {
-                contextManager.addPathFragments(java.util.List.of(ppf));
-            } else if (fragment instanceof ContextFragment.VirtualFragment vf) {
-                contextManager.addVirtualFragment(vf);
+            if (summarize) {
+                contextManager.addSummaries(files, Collections.emptySet());
             } else {
-                throw new AssertionError(fragment);
+                contextManager.addFiles(files);
             }
         });
     }
@@ -2089,7 +2012,7 @@ public class WorkspacePanel extends JPanel {
         // FIXME: prefer classes where available (more selective)
         selectedFragments.stream().flatMap(frag -> frag.files().stream()).forEach(selectedFiles::add);
 
-        if (selectedFiles.isEmpty() && selectedClasses.isEmpty()) {
+        if (selectedFiles.isEmpty()) {
             chrome.toolError("No files or classes identified for summarization in the selection.");
             return;
         }
@@ -2189,6 +2112,114 @@ public class WorkspacePanel extends JPanel {
         }
     }
 
+    private void computeApproxTokensAsync(StringBuilder fullText, int totalLines) {
+        contextManager
+                .submitBackgroundTask(
+                        "Compute token estimate", () -> Messages.getApproximateTokens(fullText.toString()))
+                .thenAccept(approxTokens -> SwingUtilities.invokeLater(() -> {
+                    var innerLabel = safeGetLabel(0);
+                    var costLabel = safeGetLabel(1);
+
+                    // Check for context size warning against the selected model only
+                    var service = contextManager.getService();
+                    var instructionsPanel = chrome.getInstructionsPanel();
+                    Service.ModelConfig selectedConfig = instructionsPanel.getSelectedModel();
+
+                    boolean showRedWarning = false;
+                    boolean showYellowWarning = false;
+                    int selectedModelMaxInputTokens = -1;
+                    String selectedModelName = selectedConfig.name();
+
+                    if (!selectedModelName.isBlank()) {
+                        try {
+                            var modelInstance = service.getModel(selectedConfig);
+                            if (modelInstance == null) {
+                                logger.debug("Selected model unavailable for context warning: {}", selectedModelName);
+                            } else if (modelInstance instanceof Service.UnavailableStreamingModel) {
+                                logger.debug("Selected model unavailable for context warning: {}", selectedModelName);
+                            } else {
+                                selectedModelMaxInputTokens = service.getMaxInputTokens(modelInstance);
+                                if (selectedModelMaxInputTokens <= 0) {
+                                    logger.warn(
+                                            "Selected model {} has invalid maxInputTokens: {}",
+                                            selectedModelName,
+                                            selectedModelMaxInputTokens);
+                                } else {
+                                    // Red warning: context > 90.9% of max (approxTokens > maxInputTokens / 1.1)
+                                    if (approxTokens > selectedModelMaxInputTokens / 1.1) {
+                                        showRedWarning = true;
+                                    }
+                                    // Yellow warning: context > 50% of max (approxTokens > maxInputTokens / 2.0)
+                                    else if (approxTokens > selectedModelMaxInputTokens / 2.0) {
+                                        showYellowWarning = true;
+                                    }
+                                }
+                            }
+                        } catch (Exception e) {
+                            logger.warn(
+                                    "Error processing selected model {} for context warning: {}",
+                                    selectedModelName,
+                                    e.getMessage(),
+                                    e);
+                        }
+                    }
+
+                    String warningTooltip =
+                            """
+        Consider replacing full files with summaries or tackling a smaller piece of your problem to start with.
+        Deep Scan can help surface the parts of your codebase that are necessary to solving the problem.
+        """;
+
+                    // Always set the standard summary text on innerLabel (single line to avoid layout jumps)
+                    innerLabel.setForeground(UIManager.getColor("Label.foreground")); // Reset to default color
+                    String costEstimate = calculateCostEstimate(approxTokens, service);
+                    String costText = costEstimate.isBlank() ? "n/a" : costEstimate;
+
+                    // Single-line summary to keep the paperclip aligned
+                    innerLabel.setText("%,dK tokens ≈ %s/req".formatted(approxTokens / 1000, costText));
+
+                    // Preserve details in tooltip
+                    innerLabel.setToolTipText("Total: %,d LOC is ~%,d tokens with an estimated cost of %s per request"
+                            .formatted(totalLines, approxTokens, costText));
+
+                    // Keep the secondary label hidden to avoid changing the row height
+                    costLabel.setText(" ");
+                    costLabel.setVisible(false);
+
+                    // Remove any existing warning labels from the warningPanel
+                    warningPanel.removeAll();
+
+                    if (showRedWarning) {
+                        String warningText = String.format(
+                                "Warning! Your Workspace (~%,d tokens) fills more than 90%% of the context window for the selected model: %s (%,d). Performance will be degraded.",
+                                approxTokens, selectedModelName, selectedModelMaxInputTokens);
+
+                        JTextArea warningArea = createWarningTextArea(warningText, Color.RED, warningTooltip);
+                        warningPanel.add(warningArea, BorderLayout.CENTER);
+
+                    } else if (showYellowWarning) {
+                        String warningText = String.format(
+                                "Warning! Your Workspace (~%,d tokens) fills more than half of the context window for the selected model: %s (%,d). Performance may be degraded.",
+                                approxTokens, selectedModelName, selectedModelMaxInputTokens);
+
+                        JTextArea warningArea = createWarningTextArea(
+                                warningText,
+                                Color.YELLOW,
+                                warningTooltip); // Standard yellow might be hard to see on some themes
+                        warningPanel.add(warningArea, BorderLayout.CENTER);
+                    }
+
+                    warningPanel.revalidate();
+                    warningPanel.repaint();
+
+                    revalidate();
+                    repaint();
+
+                    // Notify listeners that bottom controls height may have changed
+                    fireBottomControlsHeightChanged();
+                }));
+    }
+
     /**
      * Sets the editable state of the workspace panel.
      *
@@ -2209,6 +2240,7 @@ public class WorkspacePanel extends JPanel {
             repaint();
 
             refreshMenuState();
+            updateDropSelectedButtonEnabled();
         });
     }
 
@@ -2274,6 +2306,26 @@ public class WorkspacePanel extends JPanel {
         this.dropAllMenuItem = dropAllMenuItem;
     }
 
+    /** Enable/disable the Drop Selected button based on selection and workspace state. */
+    private void updateDropSelectedButtonEnabled() {
+        boolean hasSelection = contextTable.getSelectedRowCount() > 0;
+        boolean editable = workspaceCurrentlyEditable;
+        boolean onLatest = isOnLatestContext();
+
+        boolean enabled = editable && onLatest && hasSelection;
+        dropSelectedButton.setEnabled(enabled);
+
+        if (!editable) {
+            dropSelectedButton.setToolTipText(READ_ONLY_TIP);
+        } else if (!onLatest) {
+            dropSelectedButton.setToolTipText("Drop is only available when viewing the latest context");
+        } else if (!hasSelection) {
+            dropSelectedButton.setToolTipText("Select item(s) to drop");
+        } else {
+            dropSelectedButton.setToolTipText("Drop selected item(s) from workspace");
+        }
+    }
+
     private void refreshMenuState() {
         var editable = workspaceCurrentlyEditable;
 
@@ -2305,5 +2357,8 @@ public class WorkspacePanel extends JPanel {
         if (dropAllMenuItem != null) {
             dropAllMenuItem.setEnabled(true);
         }
+
+        // Update drop-selected button
+        updateDropSelectedButtonEnabled();
     }
 }
